Flex homework finished.

--- a/module-3/04_Flexbox/student-exercise/mini-exercises/align-content-column/step-4/main.css
+++ b/module-3/04_Flexbox/student-exercise/mini-exercises/align-content-column/step-4/main.css
@@ -6,8 +6,12 @@ body {
 }
 
 .container {
-  background-color: #F0F0F0;
+  background-color: hsl(0, 0%, 94%);
   height: 500px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
 }
 
 .box {
