--- a/module-3/04_Flexbox/student-exercise/mini-exercises/header/step-2/main.css
+++ b/module-3/04_Flexbox/student-exercise/mini-exercises/header/step-2/main.css
@@ -4,6 +4,7 @@ body {
 }
 
 header {
+  display: flex;
   background-color: #F0F0F0;
   padding: 20px;
 }
@@ -17,6 +18,8 @@ nav {
 }
 
 ul {
+  display: flex;
+  justify-content: center;
   margin: 0;
   padding: 0;
   list-style-type: none;
